[package]
name = "fingering_chart"
version = "0.1.0"
authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midly = "0.4"
image = "0.23"
lazy_static = "1.4"
ron = "0.6"
serde = "1.0"