[package]
name = "sax-fingering-chart"
version = "0.2.4"
license = "MIT"
description = "Takes midi files and outputs fingering charts for a saxophone."
authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
edition = "2018"
keywords = ["audio", "music", "sound", "saxophone"]
categories = ["multimedia"]
repository = "https://github.com/Eolu/sax-fingering-chart"
homepage = "https://github.com/Eolu/sax-fingering-chart"
readme = "README.md"
build = "res/build.rs"
exclude = ["examples/*"]

[dependencies]
enumset = {version = "1.0", features = ["serde"]}
midly = "0.5"
image = "0.23"
lazy_static = "1.4"
ron = "0.6"
serde = "1.0"

[build-dependencies]
const-gen = "0.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
